<resources>
    <string name="app_name">LK University</string>
    <!-- Если успеем, то можем в будущем заменить на реальный домен -->
    <string name="base_url">http://10.0.2.2/</string>
    <string name="login_request">login.php</string>
    <string name="signup_request">registr.php</string>
    <string name="home_request">notifications.php</string>
    <string name="study_request">materials.php</string>
    <string name="schedule_request">schedule.php</string>
    <string name="finance_request">finances.php</string>
    <string name="fqw_request">fqw.php</string>
    <string name="group_request">list_groups.php</string>
    <string name="teachers_request">list_teachers.php</string>
    <string name="password_change_request">password_change.php</string>
    <string name="password_recover_request">password_recover.php</string>
    <string name="upload_profile_picture_request">upload_profile_picture.php</string>

    <string name="login_error_message">Данный пользователь не найден в системе</string>
    <string name="api_error_message">Ошибка в API</string>
    <string name="login_unknown_error_message">Неизвeстная ошибка</string>
    <string name="login_empty_response_error_message">Сервер не вернул результат запроса</string>
    <string name="signup_server_error">Сервер не смог внести пользователя в БД</string>
    <string-array name="student_main_tab_ui">
        <item>Уведомления</item>
        <item>Учёба</item>
        <item>Расписание</item>
        <item>Финансы</item>
    </string-array>
    <string-array name="teacher_main_tab_ui">
        <item>Руководителю ВКР</item>
        <item>Расписание</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="LK">ЛИЧНЫЙ КАБИНЕТ</string>
    <string name="of_student_and_employee">студента и сотрудника</string>
    <string name="Email">Email</string>
    <string name="password">Пароль</string>
    <string name="current_password">Текущий пароль</string>
    <string name="new_password">Новый пароль</string>
    <string name="LogIn">Войти</string>
    <string name="SignUp">Зарегестрироваться</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="password_reset"><font color="#44AD57">Ваш пароль был сброшен!</font></string>
    <string name="support_text">Техническая поддержка - lk@nngasu.ru</string>
    <string name="enter_email">Введите Email</string>
    <string name="enter_password">Введите пароль</string>
    <string name="enter_current_password">Введите текущий пароль</string>
    <string name="enter_new_password">Введите новый пароль</string>
    <string name="enter_password_number">Введите номер паспорта</string>
    <string name="enter_SNILS">Введите СНИЛС</string>
    <string name="enter_name">Введите ФИО</string>
    <string name="enter_password_confirm">Подтвердите пароль</string>
    <string name="back">Назад</string>
    <string name="SNILS">СНИЛС</string>
    <string name="name">ФИО</string>
    <string name="password_number">Номер паспорта</string>
    <string name="confirm_password">Подтвердить пароль</string>
    <string name="send_link">Получить ссылку</string>
    <string name="forgot_password_text">Забыли свой пароль? Без проблем. Просто сообщите нам свой адрес электронной почты, и мы вышлем вам по электронной почте ссылку для сброса пароля.</string>
    <string name="link_sent_text"><font color="#44AD57">Мы отправили ссылку для сброса пароля по электронной почте!</font></string>
    <string name="change_profile_picture_button">Выбрать фото</string>
    <string name="change_password_text">Сменить пароль</string>
    <string name="account_exit_button">Выйти</string>
    <string name="finances">Финансы</string>
    <string name="follow">Перейти</string>
    <string name="start_date">Дата начала</string>
    <string name="end_date">Дата конца</string>
    <string name="group_choice">Выбор группы</string>
    <string name="teacher_choice">Выбор преподавателя</string>
    <string name="to_the_supervisor">Руководителю ВКР</string>
    <string name="student_list">СПИСОК СТУДЕНТОВ</string>
    <string name="schedule_text">Для удобного просмотра расписания также доступен чат-бот: @Official_NNGASU_LK_bot</string>
</resources>