<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E7ECF5"
    tools:context=".LogInActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="343dp"
        android:layout_height="637dp"
        android:layout_marginTop="40dp"
        app:cardCornerRadius="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="32dp">

            <EditText
                android:id="@+id/emailEditText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/edit_text_bg"
                android:ems="10"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.491"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/password"
                android:textColor="#5C5E60"
                app:layout_constraintStart_toStartOf="@+id/emailEditText"
                app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto_flex"
                android:text="@string/LK"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/edit_text_bg"
                android:ems="10"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="286dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:backgroundTint="#005F9C"
                android:elevation="8dp"

                android:text="@string/LogIn"
                android:textStyle="bold"
                app:cornerRadius="8dp"
                app:layout_constraintBottom_toTopOf="@+id/registerButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/registerButton"
                android:layout_width="286dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:backgroundTint="#FFFFFF"
                android:text="@string/SignUp"
                android:textColor="#5C5E60"
                android:textStyle="bold"
                app:cornerRadius="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:strokeColor="#5C5E60"
                app:strokeWidth="1dp" />

            <TextView
                android:id="@+id/password_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/password_reset"
                app:layout_constraintStart_toStartOf="@+id/passwordRecoveryButton"
                app:layout_constraintTop_toBottomOf="@+id/passwordRecoveryButton" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/nngasu_logo_square" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_flex"
                android:text="@string/of_student_and_employee"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/Email"
                android:textColor="#5C5E60"
                app:layout_constraintStart_toStartOf="@+id/emailEditText"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <Button
                android:id="@+id/passwordRecoveryButton"
                android:layout_width="184dp"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="#FFFFFF"
                android:text="@string/forgot_password"
                android:textColor="#5C5E60"
                app:cornerRadius="8dp"
                app:layout_constraintStart_toStartOf="@+id/emailEditText2"
                app:layout_constraintTop_toBottomOf="@+id/emailEditText2"
                app:strokeWidth="1dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/support_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>